# mcp_proxy

./: .gitignore  GIGACODE.md  GIGACODE_BOOTSTRAP_PROMPT.md  README.md  gigacode-extension.json  pyproject.toml
agents/: confluence-chunk-editor.md  confluence-cross-page-controller.md  confluence-merge-controller.md
commands/: large-confluence-edit.md  multi-confluence-review.md
docs/: direct-api-v2.md  file-first-v3.md  stage1-extension.md  stage1-macos-setup.md  stage2-runbook.md  team-confluence-workflow.md
examples/: confluence-rest.config.example.json  confluence-section-mcp.config.example.json  gigacode-mcp-config.json  gigacode-mcp-config.no-env.json  gigacode-mcp-config.smoke.json  stage1-atlassian-settings.sample.json
prompts/: review-and-fix-existing-job-file-first.md  review-and-fix-existing-job.md  review-only-existing-job.md  review-only-two-pages.md
scripts/: advance_review_loop.py  bootstrap_confluence_workspace.py  bootstrap_direct_review_job.py  bootstrap_review_job_from_file_root.py  build_chunk_briefs.py  chunk_confluence_markdown.py  collect_controller_summary.py  fetch_confluence_pages.py  init_review_job.py  lib_confluence_workflow.py  lib_markdown_chunks.py  lib_page_store.py  lib_review_job.py  materialize_review_job_outputs.py  merge_confluence_chunks.py  prepare_confluence_workspace.py  publish_new_pages.py  publish_review_job.py  resolve_confluence_refs.py  validate_review_job_outputs.py  write_back_confluence_workspace.py
tests/: test_config.py  test_confluence_workflow_lib.py  test_gigacode_settings.py  test_markdown_chunks_lib.py  (+7 more)
(+41 files in other folders)
